Fix Lightmode yellow text visibility for preventing asthenopia

--- a/Modern Dark Theme.css
+++ b/Modern Dark Theme.css
@@ -27,7 +27,7 @@
 	--red-text-dark: #fd776f;
 	--orange-text: #c26f1c;
 	--orange-text-dark: #f0a264;
-	--yellow-text: #ff2600;
+	--yellow-text: #EA2700;
 	--yellow-text-dark: #ffdf0b;
 	--green-text: #34a853;
 	--green-text-dark: #44dd66;
